--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,4 +1,8 @@
 .custom-button {
-  color: blue;
-  background-color: grey,
+  color: inherit;
+  background-color: grey
+}
+
+.color-red {
+  color: red
 }
